--- a/ProQuant/ProQuant/src/main/webapp/WEB-INF/web.xml
+++ b/ProQuant/ProQuant/src/main/webapp/WEB-INF/web.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
-  <!--&lt;!&ndash; <display-name>SpringMVC</display-name>-->
+  <display-name>SpringMVC</display-name>
   <welcome-file-list>
-    <!--<welcome-file>index.html</welcome-file>-->
-    <!--<welcome-file>index.htm</welcome-file>-->
-    <welcome-file>HomePage.jsp</welcome-file>
-    <!--<welcome-file>default.html</welcome-file>-->
-    <!--<welcome-file>default.htm</welcome-file>-->
-    <!--<welcome-file>default.jsp</welcome-file>-->
+	  <!--<welcome-file>MarketPage.jsp</welcome-file>-->
+	  <!--<welcome-file>UserCenterPage.jsp</welcome-file>-->
+	  <welcome-file>HomePage.jsp</welcome-file>
+	  <!--<welcome-file>login.do</welcome-file>-->
+<!--    <welcome-file>index.html</welcome-file>
+    <welcome-file>index.htm</welcome-file>
+    <welcome-file>index.jsp</welcome-file>
+    <welcome-file>default.html</welcome-file>
+    <welcome-file>default.htm</welcome-file>
+    <welcome-file>default.jsp</welcome-file>-->
   </welcome-file-list>
   <!-- The front controller of this Spring Web application, responsible for handling all application requests -->
 	<filter>
@@ -39,8 +43,8 @@
 	<!-- Map all requests to the DispatcherServlet for handling -->
 	<servlet-mapping>
 		<servlet-name>springDispatcherServlet</servlet-name>
-		<url-pattern>/</url-pattern>
+		<url-pattern>*.do</url-pattern>
 	</servlet-mapping>
-
-
+  
+  
 </web-app>
